Version 9.2 - xxxx edition. 26 November 2020

Fixed loading General Sound rom
Fixed CPC CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
Fixed CPC setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

TBBlue: Fixed writing on divmmc memory when layer2 active

Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots
Added configuration & command line setting to save keymap type
Added some file converters: from SNA, SP, Z80, P, ZSF to SCR 


Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Added F-key to close all open menus
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values
-Now backgrounded windows can be seen even with menu closed (added a setting and also a F-key)

Improved ZRCP: 
-Added MMU information to cpu-history and get-registers commands
-Added ZRCP command qdos-get-open-files: to get open files from QL QDOS

Improved debugging:
-Added debug console as a menu window
-Added MMU information when viewing cpu registers on terminal console

Improved Waveform window: Now can show left & right channels
Improved 1 bit resample audio filter